# AuroraFairy

./: README.md  debug.html  index.html  package-lock.json  package.json  security-rules.json  test-render.cjs  vite.config.ts
scripts/: build-fairy-action.mjs  convert_model.py  download_model.py  increment-version.mjs  openvino_server.py  prepare-binaries.mjs  transformers_server.py
src/: App.vue  debug.ts  main.ts
src-tauri/: Cargo.toml  create_doc.py  guokr_content.html  guokr_content.txt  guokr_download.html  guokr_full.html  guokr_page.html  load_test.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: browser.rs  fap.rs  fbm_fs.rs  feishu.rs  file.rs  local_models.rs  mod.rs  proxy.rs  qdrant_manager.rs  security_rules.rs  shell.rs  telemetry.rs  tts.rs  watcher.rs  weixin.rs
src/agent/: FairySysTools.ts  channelBridge.ts  channelRegistry.ts  contextManager.ts  conversationSummarizer.ts  fairyDo.ts  fairyTask.ts  feishuBridge.ts  messageDispatcher.ts  reactLoop.ts  subAgent.ts  systemPromptAssembler.ts  tokenEstimator.ts  virtualHandlers.ts  weixinBridge.ts
src/components/: AboutPage.vue  AgentMemoryPage.vue  AgentToolsPage.vue  AppLayout.vue  BaseDialog.vue  BaseSelect.vue  ChannelsPage.vue  ChatPageContent.vue  ChatSidebar.vue  ChatWindow.vue  LocalModelsPage.vue  MessageItem.vue  MiscSettingsPage.vue  NavigationSidebar.vue  OpensourceDialog.vue  PersonalizationPage.vue  RolePage.vue  SecurityRulesPage.vue  SettingsPage.vue  SkillsPage.vue  SubNavigation.vue  (+5 more)
(+32 files in other folders)
