[package]
name = "aurorafairy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "aurorafairy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
opener = "0.7"
tokio = { version = "1", features = ["process", "rt-multi-thread", "io-util", "sync", "time", "macros"] }
futures-util = "0.3"
base64 = "0.22"
regex = "1"
shellexpand = "3"
notify = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
encoding_rs = "0.8"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
prost = "0.13"
bytes = "1"
flate2 = "1"
dirs = "5"
qrcode = "0.14"

